--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "gou",
+  "name": "Juego",
   "version": "1.0.0",
-  "description": "Juegos Ludicos",
-  "main": "server.js",
-  "directories": {
-    "lib01": "lib01",
- 
-  },
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.9"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
-  },
+  "description": "taller programacion ",
+  "main": "index.js",
+  "author": "Jesus Martunez  Jose Carrascal",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Neider",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.3.1",
+    "yarn": "^1.10.1"
+  }
 }
